# ccia_code_samples

./: cancel  cond_var  future_async  promise  shared_future  shared_mutex  sort
listings/: acc  call_once  decay  fn_mem  guard  listing_1.1.cpp  listing_2.1  listing_2.1.cpp  listing_2.2  listing_2.2.cpp  listing_2.3.cpp  listing_2.4.cpp  listing_2.6  listing_2.6.cpp  listing_2.7.cpp  listing_2.8  listing_2.8.cpp  listing_3.1  listing_3.1.cpp  listing_3.5  listing_3.5.cpp  listing_3.6  listing_3.6.cpp  listing_4.13.cpp  return_val  test  thread_move  thread_test
listings/C/: main.c  thread_cancel.c  threadpool  threadpool.c  threadpool.h
listings/RAII/:  summary.md
listings/atomic/: atomic  atomic.cpp  global_var  global_var.cpp  mutex  mutex.cpp  summary.md
listings/cmake_example/: CMakeLists.txt  Makefile  app  main.c
listings/cmake_example/advance/: CMakeLists.txt
listings/cmake_example/advance/calc/: add.c  div.c  mult.c  sub.c
listings/cmake_example/advance/include/: calc.h  sort.h
listings/cmake_example/advance/sort/: insert.cpp  select.cpp
listings/cmake_example/advance/test1/: CMakeLists.txt  calc.cpp
listings/cmake_example/advance/test2/: CMakeLists.txt  sort.cpp
listings/cmake_example/src/: add.c  div.c  mult.c  sub.c
listings/locks/: lock.cpp  lock_guard.cpp  recursive_mutex.cpp  shared_mutex.cpp  summary.md
listings/makefile_example/: div.c  head.h  main.c  makefile
listings/makefile_example/practice/: calc  makefile
listings/makefile_example/practice/src/: mult.c
listings/std/: call_once.cpp  decay.cpp  fn_mem.cpp  summary.md
listings/terms/:  summary.md
listings/thread/: future_async.cpp  return_val.cpp  shared_future.cpp  summary.md  thread  thread.cpp  thread_move.cpp
listings/thread_pool/: main.cpp  thread_pool  thread_pool.cpp  thread_pool.h
